@@ -1,5 +1,8 @@
 2002-06-23  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* config.make.in (PACKAGE_NAME):
+	(PACKAGE, package):  Don't hardcode.
+
 	* VERSION (PACKAGE_NAME): Typo fix.
 
 2002-06-23  Han-Wen  <hanwen@cs.uu.nl>
